<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoSelector</string>
    <string name="more_than_max">超过了上限</string>
    <string name="preview">预览</string>
    <string name="recent_photos">最近照片</string>
    <string name="sure">确定</string>
    <string name="select_complete">确定（%d）</string>
    <string name="select_photos">选择照片</string>
    <string name="back">返回</string>
    <string name="taking_pictures">拍摄照片</string>
    <string name="max_img_limit_reached">最多只能选择%d张图片哦~</string>

</resources>